// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`admin_console/team_channel_settings/channel/ChannelList should match snapshot 1`] = `
<div
  className="groups-list groups-list-no-padding"
>
  <div
    className="groups-list--global-actions"
  >
    <div
      className="group-list-search"
    >
      <input
        data-testid="search-input"
        onChange={[Function]}
        onKeyUp={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      <SearchIcon
        aria-hidden="true"
        className="search__icon"
        id="searchIcon"
      />
      <i
        className="fa fa-times-circle group-filter-action hidden"
        data-testid="clear-search"
        onClick={[Function]}
      />
    </div>
  </div>
  <AbstractList
    actions={
      Object {
        "getData": [MockFunction],
        "removeGroup": [MockFunction],
        "searchAllChannels": [MockFunction],
      }
    }
    data={
      Array [
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "123",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
      ]
    }
    emptyListTextDefaultMessage="test"
    emptyListTextId="test"
    header={
      <div
        className="groups-list--header"
      >
        <div
          className="group-name adjusted"
        >
          <FormattedMessage
            defaultMessage="Name"
            id="admin.channel_settings.channel_list.nameHeader"
            values={Object {}}
          />
        </div>
        <div
          className="group-content"
        >
          <div
            className="group-description"
          >
            <FormattedMessage
              defaultMessage="Team"
              id="admin.channel_settings.channel_list.teamHeader"
              values={Object {}}
            />
          </div>
          <div
            className="group-description adjusted"
          >
            <FormattedMessage
              defaultMessage="Management"
              id="admin.channel_settings.channel_list.managementHeader"
              values={Object {}}
            />
          </div>
          <div
            className="group-actions"
          />
        </div>
      </div>
    }
    key="0"
    noPadding={true}
    onPageChangedCallback={[Function]}
    removeGroup={[MockFunction]}
    renderRow={[Function]}
    total={1}
  />
</div>
`;

exports[`admin_console/team_channel_settings/channel/ChannelList should match snapshot with paging 1`] = `
<div
  className="groups-list groups-list-no-padding"
>
  <div
    className="groups-list--global-actions"
  >
    <div
      className="group-list-search"
    >
      <input
        data-testid="search-input"
        onChange={[Function]}
        onKeyUp={[Function]}
        placeholder="Search"
        type="text"
        value=""
      />
      <SearchIcon
        aria-hidden="true"
        className="search__icon"
        id="searchIcon"
      />
      <i
        className="fa fa-times-circle group-filter-action hidden"
        data-testid="clear-search"
        onClick={[Function]}
      />
    </div>
  </div>
  <AbstractList
    actions={
      Object {
        "getData": [MockFunction],
        "removeGroup": [MockFunction],
        "searchAllChannels": [MockFunction],
      }
    }
    data={
      Array [
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN0",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id0",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN1",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id1",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN2",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id2",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN3",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id3",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN4",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id4",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN5",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id5",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN6",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id6",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN7",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id7",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN8",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id8",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN9",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id9",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN10",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id10",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN11",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id11",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN12",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id12",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN13",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id13",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN14",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id14",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN15",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id15",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN16",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id16",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN17",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id17",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN18",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id18",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN19",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id19",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN20",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id20",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN21",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id21",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN22",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id22",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN23",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id23",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN24",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id24",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN25",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id25",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN26",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id26",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN27",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id27",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN28",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id28",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
        Object {
          "create_at": 0,
          "creator_id": "id",
          "delete_at": 0,
          "display_name": "DN29",
          "extra_update_at": 0,
          "group_constrained": false,
          "header": "header",
          "id": "id29",
          "last_post_at": 0,
          "name": "DN",
          "purpose": "purpose",
          "scheme_id": "id",
          "team_id": "team_id",
          "total_msg_count": 0,
          "type": "O",
          "update_at": 0,
        },
      ]
    }
    emptyListTextDefaultMessage="test"
    emptyListTextId="test"
    header={
      <div
        className="groups-list--header"
      >
        <div
          className="group-name adjusted"
        >
          <FormattedMessage
            defaultMessage="Name"
            id="admin.channel_settings.channel_list.nameHeader"
            values={Object {}}
          />
        </div>
        <div
          className="group-content"
        >
          <div
            className="group-description"
          >
            <FormattedMessage
              defaultMessage="Team"
              id="admin.channel_settings.channel_list.teamHeader"
              values={Object {}}
            />
          </div>
          <div
            className="group-description adjusted"
          >
            <FormattedMessage
              defaultMessage="Management"
              id="admin.channel_settings.channel_list.managementHeader"
              values={Object {}}
            />
          </div>
          <div
            className="group-actions"
          />
        </div>
      </div>
    }
    key="0"
    noPadding={true}
    onPageChangedCallback={[Function]}
    removeGroup={[MockFunction]}
    renderRow={[Function]}
    total={30}
  />
</div>
`;
